--- a/frontend/src/container/Header/Header.scss
+++ b/frontend/src/container/Header/Header.scss
@@ -35,6 +35,7 @@
         padding-top: 25px;
 
         .left {
+            margin-top: 4.2rem;
             padding: 15px;
 
             .info li {
